[package]
name = "rvault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="rvault"
path="src/bin/rvault.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
dialoguer = "0.11.0"
colored = "2.1.0"